# kairos-risk-manager

./: .env.example  Makefile  README.md  pyproject.toml
kairos_risk/: __init__.py  account.py  circuit_breaker.py  config.py  pipeline.py  service.py  sizing.py  strategy.py  validators.py
tests/: test_circuit_breaker.py  test_pipeline.py  test_service.py  test_strategy.py  test_validators.py
